# Comet

./: .gitignore  CREDITS  Makefile.am  NEWS.md  README.md  configure.ac  meson.build  setup
.github/workflows/: ci.yml
authd/providers/: dnsbl.c
bandb/: bandb.c  bantool.c  meson.build
doc/: ircd.conf.example  reference.conf
doc/features/: batch.txt  filter.txt
doc/oper-guide/: cmodes.rst  umodes.rst
doc/technical/: hooks.md  ts6.md
extensions/: Makefile.am  cap_oper.c  cap_realhost.c  chm_botonly.c  chm_nobot.c  chm_regmsg.c  example_module.c  identify_msg.c  ip_cloaking.c  ip_cloaking_old.c  m_findforwards.c  m_irccloud.c  m_omode.c  m_opme.c  m_quarantine.c  meson.build  sno_channelcreate.c  tag_channel_context.c  tag_message_id.c  tag_reply.c  tag_typing.c
help/opers/: cmode  umode
help/users/: cmode  umode
include/: batch.h  channel.h  chmode.h  client.h  defaults.h  ircd_defs.h  modules.h  msgbuf.h  response.h  s_conf.h  s_newconf.h  s_serv.h  send.h  serno.h.SH  supported.h
ircd/: Makefile.am  batch.c  channel.c  chmode.c  client.c  ircd.c  logger.c  match.c  meson.build  modules.c  msgbuf.c  newconf.c  parse.c  response.c  s_conf.c  s_newconf.c  s_serv.c  s_user.c  send.c  supported.c  version.c.SH
librb/: configure.ac
librb/include/: rb_dictionary.h
modules/: Makefile.am  cap_account_tag.c  cap_server_time.c  m_admin.c  m_batch.c  m_cap.c  m_capab.c  m_challenge.c  m_info.c  m_invite.c  m_irccloud.c  m_list.c  m_oper.c  m_scan.c  m_topic.c  m_whois.c
scripts/: application.sh
tests/: labeled_response1.c
tools/: meson.build
(+11 files in other folders)
